Add Data Unifier Service implementation
- Implement DataUnificationController for running unification process
- Add PostgreSQL and MySQL configuration and adapters
- Create Kafka producers and consumers for unified data
- Add health indicators and monitoring endpoints
- Implement global exception handling
- Add test controllers for service verification